# cooPi

./: .gitignore  README.md  main.py  pyproject.toml
lib/: config.py  pca9685.py
